<resources>
    <string name="app_name">NavigationAid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_places">Meine Orte</string>
    <string name="take_quiz">Quiz nehmen</string>
    <string name="hint">Hilfestellung</string>
    <string name="add_new_place">Neuen Ort hinzufügen</string>
    <string name="edit_place">Ort bearbeiten</string>
    <string name="place_name_req">Name des Ortes <font color='#FF0000'>*</font></string>
    <string name="open_camera">Kamera</string>
    <string name="open_gallery">Gallerie</string>
    <string name="choose_place">Ort auswählen <font color='#FF0000'>*</font></string>
    <string name="open_map">Karte öffnen</string>
    <string name="place_chosen">Ort ausgewählt</string>
    <string name="cancel">Abbrechen</string>
    <string name="done">Fertig</string>
    <string name="content_desc_place_preview">Vorschau für Ort</string>
    <string name="camera_error">Kamera Fehler</string>
    <string name="image_permission_required">Erlaubnis notwendig zum Erstellen personalisierter Orte</string>
    <string name="choose_image">Wähle ein Bild</string>
    <string name="location_unavailable">Standort nicht verfügbar</string>
    <string name="content_desc_find_location">Standort finden</string>
    <string name="navigation_duration">Dauer</string>
    <string name="navigation_distance">Distanz</string>
    <string name="distance_meters">%s Meter</string>
    <string name="distance_kilometers">%s Kilometer</string>
    <string name="location_permission_required">Erlaubnis für Standort nötig</string>
    <string name="duration_minutes">%s Minuten</string>
    <string name="map_fragment_title">Wähle einen Standort</string>
    <string name="routes_fragment_title">Routen</string>
    <string name="quiz_container_fragment_title">Quiz</string>
    <string name="places_fragment_title">Meine Orte</string>
    <string name="home_fragment_title">NavigationAid</string>
    <string name="delete_place">Ort löschen</string>
    <string name="destination">Ziel: %s</string>
    <string name="route_overview_fragment_title">Routenübersicht</string>
    <string name="estimated_time_of_arrival">geschätze Ankunftszeit</string>
    <string name="description_difficulty_1">sehr leichte Route</string>
    <string name="description_difficulty_2">leichte Route</string>
    <string name="description_difficulty_3">anspruchsvolle Route</string>
    <string name="description_difficulty_4">schwere Route</string>
    <string name="description_difficulty_5">sehr schwere Route</string>
    <string name="view_on_map">Auf Karte ansehen</string>
    <string name="start_navigation">Navigation starten</string>
    <string name="back_to_route_overview">zurück zur Übersicht</string>
    <string name="reset_map_view">Ansicht zurück setzen</string>
    <string name="route_viewer_fragment_title">Routen-Ansicht</string>
    <string name="share_map">Karte Teilen</string>
    <string name="storage_permission_required">Speicherfreigabe notwendig</string>

    <!-- HELP STRINGS -->
    <string name="help_home">Wilkommen bei NavigationAid!\nMit dieser App wirst du einfach und ohne Umwege all die Orte erreichen, die dir wichtig sind.\n\nFalls du an jeglicher Stelle Hilfe brauchst, tippe einfach auf das \"?\" in der oberen rechten Ecke deines Bildschirms.\nUm die Liste deiner gespeicherten Orte anzuschauen, oder um einen neuen Ort abzuspeichern, tippe auf \"Meine Orte\".\nUm bessere Empfehlungen zu Strecken zu bekommen, nimm an einem kleinen Test teil in \"Quiz nehmen\".</string>
    <string name="help_location_picker">Mithilfe dieser Karte kannst du bestimmen, wo sich dein neuer Ort befinden soll.\n\nZiehe mit deinem Finger über die Karte, bis der Marker in der Bildschirm-Mitte auf den gewünschten Platz zeigt.\nUm die Ansicht zu vergrößern, ziehe zwei Finger auf dem Bildschirm auseinander, oder benutze die \"+\" und \"-\" Knöpfe.\nAm einfachsten ist es, wenn du dich bereits an deinem gewünschten Ort befindest. Tippe einfach auf den runden Knopf in der unteren rechten Ecke, damit die Karte dich automatisch findet! Dafür muss der Standort auf deinem Gerät aktiviert sein.\n\nLasse dir Notfalls bei diesem Schritt helfen!</string>
    <string name="help_place_editor">Es ist empfohlen, einen Ort immer dann anzulegen, wenn du dich schon dort befindest - dies macht die Einrichtung besonders einfach!\n\nAuf diesem Bildschirm kannst du alle notwendigen Informationen angeben, um im Nu einen Ort abzuspeichern, zu dem du jeder Zeit zurück navigieren kannst.\n\nDu brauchst:\nEin Bild, um deinen Ort leicht in der Liste wieder zu erkennen.\nEinen Namen, der dir genau sagt, wo es hin geht.\nEinen Standort, damit auch deine App weiß, wo du hin möchtest.\n\nNimm ein neues Bild auf mit dem \"Kamera\" Knopf, oder wähle eines von deinem Gerät mit dem \"Gallerie\" Knopf.\nTippe in das Eingabe-Feld, um einen Namen festzulegen.\nDen Standort kannst du durch Tippen auf \"Karte öffnen\" festlegen.\nBearbeitest du einen bereits gespeicherten Ort, hast du zusätzlich die Möglichkeit, ihn mit \"Ort löschen\" aus der Liste zu entfernen. Die lässt sich jedoch nicht rückgängig machen, deswegen fragen wir immer noch einmal nach, ob du dir sicher bist.\n\nEs ist empfohlen, einen Ort immer dann anzulegen, wenn du dich schon dort befindest - dies macht die Einrichtung besonders einfach!</string>
    <string name="help_places">Hier wirst du eine Liste all deiner gespeicherten Orte sehen.\n\nIst die Liste leer, und du möchtest einen neuen Ort abspeichern? Kein Problem, tippe einfach auf das \"+\" Symbol - Dieses wirst du immer am Ende der Liste finden.\nUm von deinem Standort zu einem deiner Orte zu finden, tippe einfach auf das gewünschte Ziel. Dort werden dir alle Strecken angezeigt! Beachte, dass hierfür der Standort auf deinem Gerät aktiviert sein muss.\nMöchtest du einen gespeicherten Ort bearbeiten oder löschen, halte deinen Finger auf ihn drauf.\n\nIst ein gespeicherter Ort, oder das \"+\" Symbol am Ende der Liste versteckt, ziehe deinen Finger von unten nach oben über den Bildschirm, um die gesamte Liste zu betrachten.</string>
    <string name="help_route_overview">Hier hast du alle wichtigen Informationen zu deinem Weg auf einen Blick.\n\nMöchtest du ein Bild der Strecke mit jemanden teilen, tippe auf \"Auf Karte ansehen\".\nBist du bereit zum Starten, tippe auf \"Navigation starten\".\n(Dieser Knopf ist nicht Teil der App, und macht nichts.)\n\nWie schwierig die Route für dich sein wird, zeigt die Markierung auf den bunten Kästchen. Vergiss nicht, zumindest ein Mal das Quiz zu machen, um diese zu sehen.\nBeachte, dass die gezeigte Dauer und Ankunftszeit nur Schätzungen sind, und sich je nach Nutzer stark unterscheiden können.</string>
    <string name="help_routes">Hier kannst du eine Auswahl treffen, welchen Weg du gehen möchtest. Meist werden hier nur ein bis zwei Routen angezeigt.\n\nDie Dauer jeder Strecke zeigt an, wie lange du laufen wirst. Dies ist nur eine Schätzung, und kann für jeden Nutzer stark anders sein, als abgebildet.\nDie Markierung auf den bunten Kästen rechts zeigt, wie schwer die Route für dich eingeschätzt wird. Um diese zu sehen, musst du mindestens ein mal das Quiz am Anfang der App gemacht haben.\n\nTippe auf die Route, die du gehen möchtest. Manchmal kann eine Route länger sein, hat aber weniger Abbiegungen, und ist deswegen etwas leichter.</string>
    <string name="help_route_viewer">Hier ist ein Abbild der Strecke, die du gehen wirst.\n\nWenn du möchtest, dass jemand bescheid weiß, auf welchen Wegen du dich befindest, kannst du dieses Bild einfach teilen.\nTippe dafür auf den runden Knopf in der unteren rechten Ecke - Dein Gerät wird dir verschiedene Möglichkeiten geben, die Person deiner Wahl zu erreichen. Tippe auf die App, welche ihr zur Kommunikation benutzt.\n\nBeachte, dass für das Versenden von Bildern (über das Internet oder SMS/MMS) Gebühren anfallen können. Sprich dies bitte mit einer vertrauten Person ab, bevor du diese Funktion benutzt.</string>
    <string name="delete_confirmation_title">Achtung</string>
    <string name="delete_confirmation_message">Löschen eines Ortes kann nicht rückgängig gemacht werden. Bist du sicher?</string>
</resources>