<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceEditorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_between_elements"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_desc_place_preview"
            app:layout_constraintHeight_max="240dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toStartOf="@id/layout_image_buttons"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:id="@+id/layout_image_buttons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_between_elements"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/image_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/image_preview"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_camera"
                app:icon="@drawable/ic_baseline_photo_camera_24"/>

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_gallery"
                app:icon="@drawable/ic_baseline_photo_24"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_name_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements"
            android:hint="@string/place_name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_preview">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_place_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/place_name_input">

            <TextView
                android:id="@+id/text_view_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_elements"
                android:layout_weight="1"
                android:text="@string/choose_place"
                android:textSize="17sp" />

            <Button
                android:id="@+id/button_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_elements"
                android:layout_weight="1"
                android:text="@string/open_map"
                app:icon="@drawable/ic_baseline_add_location_24"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_confirmation_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements"
            app:layout_constraintTop_toBottomOf="@id/layout_place_input">

            <Button
                android:id="@+id/button_cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_elements"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_between_elements"
                android:layout_weight="1"
                android:text="@string/done" />

        </LinearLayout>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements"
            android:text="@string/delete_place"
            android:textColor="@color/red"
            style="?attr/materialButtonOutlinedStyle"
            app:icon="@drawable/ic_baseline_delete_24"
            app:layout_constraintTop_toBottomOf="@id/list_confirmation_buttons"
            app:layout_constraintStart_toStartOf="@id/list_confirmation_buttons"
            app:layout_constraintEnd_toEndOf="@id/list_confirmation_buttons"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>